
  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

19112003 (v2.3.1)  -** stable release **-
	- added: --disable-effects configure option; build ecasound 
		 without effect and controller components
	- changed: libtool is setup to only create object files for
		   static linkage; you can revert to the old behaviour
		   with the --enable-shared configure option
	- changed: ecasound.el updated to 0.8.3, lots of small
		   changes, see ecasound.el for details [mlang]
	- changed: pyecasound - due to bugs found in the native python
		   impl, the C ECI impl is again set as the default; 
		   can be overridden using --enable-pyecasound=IMPL
	- changed: pyecasound - the native python impl (ecacontrol.py)
		   now returns an error if communication with the
                   ecasound process times out
	- changed: html versions of programmer's, user's and ECI 
                   developer's guide are generated with Hevea instead
		   of latex2html [juekawa]
	- changed: updated config.guess and config.sub to more recent
		   versions
        - fixed: makefile errors when building against system libreadline
        - fixed: processing did not start in the default transport mode
	  	 with JACK versions 0.80 and older
	- fixed: recording failed with a WinTv 401dbx and the btaudio 
		 OSS driver
	- fixed: compilation against alsa-lib-1.0.x
	- fixed: default ratio value incorrectly set for -eca; does
		 not affect presets using -eca [remon]
29082003 (v2.3.0)  -** stable release **-
	- edi-entries: edi-4, edi-19 and edi-35 frozen, edi-38 added 
		       and frozen immediately, edi-39 added; frozen is 